crates/voksa-core/tests/snapshots/schedule_compiler__snapshot_buffer_vrusi.snap
---
source: crates/voksa-core/tests/schedule_compiler.rs
expression: "compiled_with(\"vrusi\", CompileOptions { dotside: false, buffer: true, })"
---
UtteranceSchedule {
    events: [
        Event {
            at_ms: 0.0,
            transition_ms: 35.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 250.0,
                            bw_hz: 100.0,
                            amp: 0.6,
                        },
                        Formant {
                            freq_hz: 1500.0,
                            bw_hz: 110.0,
                            amp: 0.0,
                        },
                        Formant {
                            freq_hz: 4500.0,
                            bw_hz: 3500.0,
                            amp: 0.3,
                        },
                    ],
                    voicing: 0.6,
                    aspiration: 0.5,
                },
            },
        },
        Event {
            at_ms: 120.0,
            transition_ms: 14.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 400.0,
                            bw_hz: 90.0,
                            amp: 0.5,
                        },
                        Formant {
                            freq_hz: 1900.0,
                            bw_hz: 110.0,
                            amp: 0.3,
                        },
                        Formant {
                            freq_hz: 2600.0,
                            bw_hz: 150.0,
                            amp: 0.15,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
            },
        },
        Event {
            at_ms: 155.0,
            transition_ms: 32.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 490.0,
                            bw_hz: 90.0,
                            amp: 1.0,
                        },
                        Formant {
                            freq_hz: 1350.0,
                            bw_hz: 110.0,
                            amp: 0.4,
                        },
                        Formant {
                            freq_hz: 1750.0,
                            bw_hz: 130.0,
                            amp: 0.45,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
            },
        },
        Event {
            at_ms: 235.0,
            transition_ms: 35.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 300.0,
                            bw_hz: 90.0,
                            amp: 1.0,
                        },
                        Formant {
                            freq_hz: 870.0,
                            bw_hz: 110.0,
                            amp: 0.75,
                        },
                        Formant {
                            freq_hz: 2240.0,
                            bw_hz: 150.0,
                            amp: 0.25,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
            },
        },
        Event {
            at_ms: 385.0,
            transition_ms: 35.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 500.0,
                            bw_hz: 90.0,
                            amp: 0.0,
                        },
                        Formant {
                            freq_hz: 1500.0,
                            bw_hz: 110.0,
                            amp: 0.0,
                        },
                        Formant {
                            freq_hz: 6000.0,
                            bw_hz: 1700.0,
                            amp: 0.9,
                        },
                    ],
                    voicing: 0.0,
                    aspiration: 1.0,
                },
            },
        },
        Event {
            at_ms: 505.0,
            transition_ms: 35.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 270.0,
                            bw_hz: 90.0,
                            amp: 1.0,
                        },
                        Formant {
                            freq_hz: 2290.0,
                            bw_hz: 110.0,
                            amp: 0.7,
                        },
                        Formant {
                            freq_hz: 3010.0,
                            bw_hz: 150.0,
                            amp: 0.45,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
            },
        },
    ],
    spans: [
        SyllableSpan {
            start_ms: 0.0,
            dur_ms: 385.0,
            nucleus_off_ms: 235.0,
            word_index: 0,
            stressed: true,
            countable: true,
        },
        SyllableSpan {
            start_ms: 120.0,
            dur_ms: 35.0,
            nucleus_off_ms: 0.0,
            word_index: 0,
            stressed: false,
            countable: false,
        },
        SyllableSpan {
            start_ms: 385.0,
            dur_ms: 270.0,
            nucleus_off_ms: 120.0,
            word_index: 0,
            stressed: false,
            countable: true,
        },
    ],
    total_ms: 655.0,
}
